--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "material-ui": "^0.10.4",
+    "object-assign": "^4.0.1",
     "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react-router": "^1.0.0-rc1",
     "react-tap-event-plugin": "^0.1.7",
-    "three": "^0.71.0"
+    "three": "^0.71.1"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
