--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "material-ui": "^0.10.4",
-    "object-assign": "^4.0.1",
-    "react": "^0.13.3",
-    "react-router": "^1.0.0-rc1",
-    "react-tap-event-plugin": "^0.1.7",
+    "history": "^1.13.0",
+    "react": "^0.14",
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0",
     "three": "^0.71.1"
   },
   "devDependencies": {
