--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-and-three",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "./app/ThreeMixin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
